--- a/Spring_sesion_pom/src/main/resources/application.properties
+++ b/Spring_sesion_pom/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = Data Source
 # ==============================================================
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/login?useSSL=true
+spring.datasource.url = jdbc:mysql://b5dec0cce6adc3:a204fdf1@us-cdbr-east-02.cleardb.com/heroku_874715a10068234?reconnect=true
 spring.datasource.username=root
 spring.datasource.password=enter_password_here
 
