--- a/Spring_sesion_pom/src/main/resources/application.properties
+++ b/Spring_sesion_pom/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8092
 # ==============================================================
 # = Data Source
 # ==============================================================
